--- a/SP05/SP05 - EX 05/index.html
+++ b/SP05/SP05 - EX 05/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div id="dadosCliente">
-            <h1>Dados do liente</h1>
+            <h1>Dados do cliente</h1>
             <form>
                 <label for="nomeDadosCliente">Nome</label>
                 <input type="text" name="nome" id="nomeDadosCliente">
