--- a/SP05/SP05 - EX 07/index.html
+++ b/SP05/SP05 - EX 07/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div id="conta">
-            <h1>Dados do liente</h1>
+            <h1>Dados da conta</h1>
             <form>
                 <label for="conta">Conta</label>
                 <input type="text" name="conta" id="conta">
@@ -22,7 +22,7 @@
             </form>
         </div>
         <div id="dadosCliente">
-            <h1>Dados do liente</h1>
+            <h1>Dados do cliente</h1>
             <form>
                 <label for="nomeDadosCliente">Nome</label>
                 <input type="text" name="nome" id="nomeDadosCliente">
